{
  "version": 4,
  "terraform_version": "1.1.1",
  "serial": 127,
  "lineage": "1275fec4-b903-b972-df41-3209fcc90683",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:523993224712:instance/i-0d174defe4ca694e6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d174defe4ca694e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mac-mini-m1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d1fff1b0d66d98c0",
            "private_dns": "ip-10-0-1-220.ec2.internal",
            "private_ip": "10.0.1.220",
            "public_dns": "ec2-3-81-89-44.compute-1.amazonaws.com",
            "public_ip": "3.81.89.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-091b98ce236bfb58d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c1eab714693002e",
            "tags": {
              "Name": "EC2-01-A"
            },
            "tags_all": {
              "Name": "EC2-01-A"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-099dffdfacc83c2a5"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh_web_SG",
            "aws_subnet.publicSN-01",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:523993224712:instance/i-0f513407adf62b0bc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f513407adf62b0bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mac-mini-m1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f7eb5471d0174ea6",
            "private_dns": "ip-192-168-1-130.ec2.internal",
            "private_ip": "192.168.1.130",
            "public_dns": "ec2-34-229-239-214.compute-1.amazonaws.com",
            "public_ip": "34.229.239.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-098f33746d93205cc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0189032460998391d",
            "tags": {
              "Name": "EC2-01-B"
            },
            "tags_all": {
              "Name": "EC2-01-B"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08474cfd2146564af"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh_web_SG",
            "aws_subnet.publicSN-01",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:523993224712:instance/i-0663af81a038158ec",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0663af81a038158ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mac-mini-m1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02648062016153922",
            "private_dns": "ip-10-0-3-202.ec2.internal",
            "private_ip": "10.0.3.202",
            "public_dns": "ec2-3-236-19-113.compute-1.amazonaws.com",
            "public_ip": "3.236.19.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03f3bf700ac5e91d4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-030b66db9f9e07305",
            "tags": {
              "Name": "EC2-02-A"
            },
            "tags_all": {
              "Name": "EC2-02-A"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-099dffdfacc83c2a5"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh_web_SG",
            "aws_subnet.publicSN-02",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:523993224712:instance/i-0b6b68d5a341bf9ff",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6b68d5a341bf9ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mac-mini-m1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00993b85a47678f70",
            "private_dns": "ip-192-168-3-127.ec2.internal",
            "private_ip": "192.168.3.127",
            "public_dns": "ec2-34-232-51-248.compute-1.amazonaws.com",
            "public_ip": "34.232.51.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0565af8396f421465",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095106e032ab58cf5",
            "tags": {
              "Name": "EC2-02-B"
            },
            "tags_all": {
              "Name": "EC2-02-B"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08474cfd2146564af"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh_web_SG",
            "aws_subnet.publicSN-02",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523993224712:internet-gateway/igw-03c5a0f3fa518f3d7",
            "id": "igw-03c5a0f3fa518f3d7",
            "owner_id": "523993224712",
            "tags": {
              "Name": "IGW-A"
            },
            "tags_all": {
              "Name": "IGW-A"
            },
            "vpc_id": "vpc-0a032a0cac45efab0"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523993224712:internet-gateway/igw-03fc8bf01b3169837",
            "id": "igw-03fc8bf01b3169837",
            "owner_id": "523993224712",
            "tags": {
              "Name": "IGW-B"
            },
            "tags_all": {
              "Name": "IGW-B"
            },
            "vpc_id": "vpc-06421e4a82c6a056f"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523993224712:route-table/rtb-0692938e2cad416c5",
            "id": "rtb-0692938e2cad416c5",
            "owner_id": "523993224712",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "privateRT-A"
            },
            "tags_all": {
              "Name": "privateRT-A"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a032a0cac45efab0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523993224712:route-table/rtb-0a359c47b11e83f9d",
            "id": "rtb-0a359c47b11e83f9d",
            "owner_id": "523993224712",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "privateRT-B"
            },
            "tags_all": {
              "Name": "privateRT-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-06421e4a82c6a056f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523993224712:route-table/rtb-01a1bc2be80e297f6",
            "id": "rtb-01a1bc2be80e297f6",
            "owner_id": "523993224712",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c5a0f3fa518f3d7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRT-A"
            },
            "tags_all": {
              "Name": "publicRT-A"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a032a0cac45efab0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523993224712:route-table/rtb-095232a5026964eec",
            "id": "rtb-095232a5026964eec",
            "owner_id": "523993224712",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03fc8bf01b3169837",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRT-B"
            },
            "tags_all": {
              "Name": "publicRT-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-06421e4a82c6a056f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateRT_SN-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016cf9ed28366d822",
            "route_table_id": "rtb-0692938e2cad416c5",
            "subnet_id": "subnet-0629d8d1eeb88312b"
          },
          "dependencies": [
            "aws_route_table.privateRT",
            "aws_subnet.privateSN-01",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0761ffbed0bed8c40",
            "route_table_id": "rtb-0a359c47b11e83f9d",
            "subnet_id": "subnet-0f1d68075ee06f44a"
          },
          "dependencies": [
            "aws_route_table.privateRT",
            "aws_subnet.privateSN-01",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateRT_SN-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf23d6215ecd1b20",
            "route_table_id": "rtb-0692938e2cad416c5",
            "subnet_id": "subnet-0e9c367d7487576f1"
          },
          "dependencies": [
            "aws_route_table.privateRT",
            "aws_subnet.privateSN-02",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c5323712545a42a",
            "route_table_id": "rtb-0a359c47b11e83f9d",
            "subnet_id": "subnet-07875ccaae80505ae"
          },
          "dependencies": [
            "aws_route_table.privateRT",
            "aws_subnet.privateSN-02",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicRT_SN-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdd8e484f9e51f8c",
            "route_table_id": "rtb-01a1bc2be80e297f6",
            "subnet_id": "subnet-04c1eab714693002e"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.publicRT",
            "aws_subnet.publicSN-01",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0619e330cfc74f8cf",
            "route_table_id": "rtb-095232a5026964eec",
            "subnet_id": "subnet-0189032460998391d"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.publicRT",
            "aws_subnet.publicSN-01",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicRT_SN-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022619a23f74e6033",
            "route_table_id": "rtb-01a1bc2be80e297f6",
            "subnet_id": "subnet-030b66db9f9e07305"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.publicRT",
            "aws_subnet.publicSN-02",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047b35d81a75379ea",
            "route_table_id": "rtb-095232a5026964eec",
            "subnet_id": "subnet-095106e032ab58cf5"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.publicRT",
            "aws_subnet.publicSN-02",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_web_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523993224712:security-group/sg-099dffdfacc83c2a5",
            "description": "Allow SSh and HTTP security group rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099dffdfacc83c2a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_web_SG",
            "name_prefix": "",
            "owner_id": "523993224712",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh_web_SG"
            },
            "tags_all": {
              "Name": "ssh_web_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a032a0cac45efab0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523993224712:security-group/sg-08474cfd2146564af",
            "description": "Allow SSh and HTTP security group rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08474cfd2146564af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_web_SG",
            "name_prefix": "",
            "owner_id": "523993224712",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh_web_SG"
            },
            "tags_all": {
              "Name": "ssh_web_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06421e4a82c6a056f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateSN-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523993224712:subnet/subnet-0629d8d1eeb88312b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0629d8d1eeb88312b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523993224712",
            "tags": {
              "Name": "privateSN-01-A"
            },
            "tags_all": {
              "Name": "privateSN-01-A"
            },
            "vpc_id": "vpc-0a032a0cac45efab0"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523993224712:subnet/subnet-0f1d68075ee06f44a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0f1d68075ee06f44a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523993224712",
            "tags": {
              "Name": "privateSN-01-B"
            },
            "tags_all": {
              "Name": "privateSN-01-B"
            },
            "vpc_id": "vpc-06421e4a82c6a056f"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateSN-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523993224712:subnet/subnet-0e9c367d7487576f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0e9c367d7487576f1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523993224712",
            "tags": {
              "Name": "privateSN-02-A"
            },
            "tags_all": {
              "Name": "privateSN-02-A"
            },
            "vpc_id": "vpc-0a032a0cac45efab0"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523993224712:subnet/subnet-07875ccaae80505ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-07875ccaae80505ae",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523993224712",
            "tags": {
              "Name": "privateSN-02-B"
            },
            "tags_all": {
              "Name": "privateSN-02-B"
            },
            "vpc_id": "vpc-06421e4a82c6a056f"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSN-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523993224712:subnet/subnet-04c1eab714693002e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04c1eab714693002e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "523993224712",
            "tags": {
              "Name": "publicSN-01-A"
            },
            "tags_all": {
              "Name": "publicSN-01-A"
            },
            "vpc_id": "vpc-0a032a0cac45efab0"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523993224712:subnet/subnet-0189032460998391d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0189032460998391d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "523993224712",
            "tags": {
              "Name": "publicSN-01-B"
            },
            "tags_all": {
              "Name": "publicSN-01-B"
            },
            "vpc_id": "vpc-06421e4a82c6a056f"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSN-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523993224712:subnet/subnet-030b66db9f9e07305",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-030b66db9f9e07305",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "523993224712",
            "tags": {
              "Name": "publicSN-02-A"
            },
            "tags_all": {
              "Name": "publicSN-02-A"
            },
            "vpc_id": "vpc-0a032a0cac45efab0"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523993224712:subnet/subnet-095106e032ab58cf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-095106e032ab58cf5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "523993224712",
            "tags": {
              "Name": "publicSN-02-B"
            },
            "tags_all": {
              "Name": "publicSN-02-B"
            },
            "vpc_id": "vpc-06421e4a82c6a056f"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523993224712:vpc/vpc-0a032a0cac45efab0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fd2aad96a70b0407",
            "default_route_table_id": "rtb-089f0c6cc26a12863",
            "default_security_group_id": "sg-00b85739d6c0f5d3f",
            "dhcp_options_id": "dopt-0b08f26a45668be11",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a032a0cac45efab0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-089f0c6cc26a12863",
            "owner_id": "523993224712",
            "tags": {
              "Name": "VPC-A"
            },
            "tags_all": {
              "Name": "VPC-A"
            }
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523993224712:vpc/vpc-06421e4a82c6a056f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-01063c451c8aa1611",
            "default_route_table_id": "rtb-07c142c6a551e0ca6",
            "default_security_group_id": "sg-08576f9767c581ba3",
            "dhcp_options_id": "dopt-0b08f26a45668be11",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06421e4a82c6a056f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07c142c6a551e0ca6",
            "owner_id": "523993224712",
            "tags": {
              "Name": "VPC-B"
            },
            "tags_all": {
              "Name": "VPC-B"
            }
          }
        }
      ]
    }
  ]
}